[project]
name = "pyinim"
version = "0.0.19"
authors = [
  { name="Antonino Bertulla", email="abertulla@email.address" },
]
description = "A Inim Cloud API client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp>=3.7.4,<4.0.0"
]
[project.optional-dependencies]
dotenv = [ "python-dotenv>=1.0.1" ]

[project.urls]
Homepage = "https://github.com/nidble/pyinim"
Issues = "https://github.com/nidble/pyinim/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"