[metadata]
name = inim-py
version = 0.0.20
author = Antonino Bertulla
author_email = abertulla@email.address
url = https://github.com/nidble/pyinim
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# package_dir=
#     =src
packages = find:
install_requires =
    aiohttp>=3.7.4,<4.0.0

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts = 
#     pyinim-utility = src.pyinim:cloud:inim